--- a/WatsonTcpTest/WatsonTcpTest.csproj
+++ b/WatsonTcpTest/WatsonTcpTest.csproj
@@ -2,11 +2,11 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFrameworks>netcoreapp3.1;net462</TargetFrameworks>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="WatsonTcp" Version="4.1.12.4" />
+    <PackageReference Include="WatsonTcp" Version="4.1.12.5" />
   </ItemGroup>
 
 </Project>
